fix bottom alignment with flex-grow in collection card

--- a/src/components/collection-card/collection-card.module.scss
+++ b/src/components/collection-card/collection-card.module.scss
@@ -30,6 +30,8 @@
 }
 
 .container {
+	display: flex;
+	flex-direction: column;
 	border-radius: var(--collection-card_corner-radius);
 	background-color: var(--collection-card_background-color);
 	color: var(--collection-card_text-color);
@@ -44,6 +46,7 @@
 }
 
 .topRow {
+	flex-grow: 1;
 	display: flex;
 	margin-left: var(--collection-card_content_padding-left);
 	margin-right: var(--collection-card_content_padding-right);
